# SolarPanelAnomalyDetection

./: .gitignore  Dockerfile  README.md  Rapport_PFE_Elharchaoui_FSA (1).docx  render.yaml  requirements.txt  setup_envs.bat  setup_envs.sh
PipeLine/: .gitignore  Dockerfile  README.md  app.py  pipeline.db  render.yaml  requirements.txt
PipeLine/models/: label_encoder.pkl  lstm_fault_detector.pth  model_config.pkl  scaler.pkl
PipeLine/parser/: parser-linux
PipeLine/templates/: index.html
RaspberryPi/: README.md  daily_check.py  device_history.db  scheduler.py  solar_telemetry.csv  sync_model.py  test_daily_check.py  test_sync_model.py
RaspberryPi/models/: feature_columns.pkl  lstm_fault_detector.pth
TrainingModel/: .gitignore  label_real_data.py  requirements.txt  training-model.ipynb
models/: label_encoder.pkl  lstm_fault_detector.pth  model_config.pkl  scaler.pkl
parser-simple/: CMakeLists.txt  README.md
parser-simple/include/: constants.h  eeprom_parser.h  json_builder.h  lookups.h  space_parser.h  types.h  utils.h
parser-simple/src/: eeprom_parser.cpp  json_builder.cpp  main.cpp  space_parser.cpp
resource/: TrueSamples.csv
src/: Gen_data.py  TrueSamples.csv  final_model_validation_results.csv  training-model.ipynb
